[package]
name = "peanut"
version = "0.1.0"
edition = "2021"

[dependencies]
# Tokio
tokio = { version = "1", features = ["full", "sync", "tracing"] }

# Teloxide
teloxide = { version = "0.13.0", features = ["macros"] }

# Serde ecosystem and seryalization tools
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.81"

# RPC
yellowstone-grpc-client = "1.12.0"
yellowstone-grpc-proto = "1.11.0"

# Logging
tracing = "0.1.37"
tracing-subscriber =  { version = "0.3.16", features = ["env-filter"] }

# Solana
solana-sdk = "1.16.17"
solana-client = "<1.17.0"
solana-program = "<1.18.4"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }

# Contract
raydium_amm = { git = "https://github.com/raydium-io/raydium-amm", default-features = false, features = [
    "client",
] }
serum_dex = { version = "0.5.10", git = "https://github.com/raydium-io/openbook-dex", default-features = false, features = [
    "client",
] }

# Database infrastructure
sqlx = { version = "*", features = ["postgres", "macros", "chrono", "runtime-tokio-native-tls"] }

# Traits
async-trait = "0.1.66"

# Config and env
config = "0.14"

# Tools
anyhow = "1"
futures = "*"
chrono = { version = "0.4", features = ["serde"] }
rand = "*"
arrayref = "0.3.9"
safe-transmute = "*"
